# MCP

./: CLAUDE.md  README.md  pyproject.toml  server.py
documentation/: external-api-documentation.md  server-architecture-documentation.md  video-gen-openai.md
