[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.25.1",
    "elevenlabs>=2.1.0",
    "httpx>=0.28.1",
    "mcp>=1.2.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.1.0",
    "pytz>=2024.1",
]
